Spring Boot 起動でコンテナが立ち上がり初期データ投入されるまで

--- a/platforms/gradle/libs.versions.toml
+++ b/platforms/gradle/libs.versions.toml
@@ -1,5 +1,13 @@
+[versions]
+# Spring Boot の依存バージョンに合わせる
+# https://docs.spring.io/spring-boot/appendix/dependency-versions/coordinates.html
+kotlin = "1.9.24"
+
 [libraries]
 spring-boot-plugin = "org.springframework.boot:spring-boot-gradle-plugin:3.3.0"
+
 # Spring Boot の依存バージョンに合わせる
 # https://docs.spring.io/spring-boot/appendix/dependency-versions/coordinates.html
 dependency-management-plugin = "io.spring.gradle:dependency-management-plugin:1.1.5"
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-allopen = { module = "org.jetbrains.kotlin:kotlin-allopen", version.ref = "kotlin" }
