獣医一覧ページの実装とテスト
jooq のコードは以下で自動生成:

```
./gradlew :petclinic-fullstack:app:jooqCodegen
```

--- a/petclinic-fullstack/app/src/main/resources/application.yml
+++ b/petclinic-fullstack/app/src/main/resources/application.yml
@@ -1,18 +1,11 @@
 spring:
   application:
     name: petclinic
-  datasource:
+  profiles:
+    default: local
+  r2dbc:
     url: ${POSTGRES_URL:r2dbc:postgresql://localhost/petclinic}
     username: ${POSTGRES_USER:petclinic}
     password: ${POSTGRES_PASS:petclinic}
-  sql:
-    init:
-      schema-locations: classpath:db/schema.sql
-      data-locations: classpath:db/data.sql
-      # SQL は冪等に書かれているのでこれでも安全
-      mode: always
-  docker:
-    compose:
-      file: @rootDir@/../docker-compose.yml
   messages:
     basename: messages/messages
