飼い主詳細を表示出来る

--- a/petclinic-fullstack/app/src/main/resources/application-local.yml
+++ b/petclinic-fullstack/app/src/main/resources/application-local.yml
@@ -1,3 +1,8 @@
+logging:
+  level:
+    org.springframework.r2dbc: DEBUG
+    io.r2dbc.postgresql.QUERY: DEBUG
+    io.r2dbc.postgresql.PARAM: DEBUG
 spring:
   sql:
     init:
