--- a/petclinic-fullstack/app/src/main/resources/application.yml
+++ b/petclinic-fullstack/app/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: petclinic
+    name: petclinic-fullstack
   profiles:
     default: local
   r2dbc:
@@ -9,3 +9,9 @@ spring:
     password: ${POSTGRES_PASS:petclinic}
   messages:
     basename: messages/messages
+  reactor:
+    context-propagation: auto
+management:
+  observations:
+    annotations:
+      enabled: true
