--- a/platforms/gradle/libs.versions.toml
+++ b/platforms/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 # https://docs.spring.io/spring-boot/appendix/dependency-versions/coordinates.html
 kotlin = "1.9.24"
 jooq = "3.19.15"
+opentelemetry = "2.10.0-alpha"
 
 [libraries]
 spring-boot-plugin = "org.springframework.boot:spring-boot-gradle-plugin:3.4.0"
@@ -21,3 +22,5 @@ jooq-codegen-gradle = { module = "org.jooq:jooq-codegen-gradle", version.ref = "
 jooq-postgres-extensions = { module = "org.jooq:jooq-postgres-extensions", version.ref = "jooq" }
 jooq-kotlin-coroutines = { module = "org.jooq:jooq-kotlin-coroutines", version.ref = "jooq" }
 spotless-plugin-gradle = "com.diffplug.spotless:spotless-plugin-gradle:6.25.0"
+opentelemetry-logback-appender = { module = "io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0", version.ref = "opentelemetry" }
+opentelemetry-logback-mdc = { module = "io.opentelemetry.instrumentation:opentelemetry-logback-mdc-1.0", version.ref = "opentelemetry" }
