--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - "./config/mimir.yaml:/etc/mimir.yaml"
   loki: # ログ
     image: grafana/loki:3.2.0@sha256:882e30c20683a48a8b7ca123e6c19988980b4bd13d2ff221dfcbef0fdc631694
-    command: ["--pattern-ingester.enabled=true", "-config.file=/etc/loki/loki.yaml"]
+    command: ["-config.file=/etc/loki/loki.yaml"]
     ports:
       - "3100:3100"
     volumes:
