(Loki) Trace ID の取得元修正

--- a/config/grafana/provisioning/datasources/datasources.yaml
+++ b/config/grafana/provisioning/datasources/datasources.yaml
@@ -9,8 +9,8 @@ datasources:
     jsonData:
       derivedFields:
         - datasourceUid: tempo
-          matcherRegex: '.*traceid\":\"([^"]+)\".*$'
-          name: traceId
+          matcherRegex: '.*traceId\":\"([^"]+)\".*$'
+          name: Trace ID
           url: '$${__value.raw}'
 
   - name: Tempo
