--- a/platforms/gradle/libs.versions.toml
+++ b/platforms/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", v
 kotlin-allopen = { module = "org.jetbrains.kotlin:kotlin-allopen", version.ref = "kotlin" }
 webjars-bootstrap = "org.webjars.npm:bootstrap:5.3.3"
 webjars-font-awesome = "org.webjars.npm:font-awesome:4.7.0"
+webjars-htmx = "org.webjars.npm:htmx.org:2.0.4"
 jooq-codegen-core = { module = "org.jooq:jooq-codegen", version.ref = "jooq" }
 jooq-meta-core = { module = "org.jooq:jooq-meta", version.ref = "jooq" }
 jooq-meta-extensions = { module = "org.jooq:jooq-meta-extensions", version.ref = "jooq" }
