Revert "test: テスト設定でFlywayを使用"
This reverts commit 34cafcc5ef685a6065fa1ccc7e2efe1411b57116.

--- a/petclinic-fullstack/app/src/test/resources/application-test.yml
+++ b/petclinic-fullstack/app/src/test/resources/application-test.yml
@@ -3,5 +3,6 @@ spring:
     url: "r2dbc:tc:postgresql:///petclinic?TC_IMAGE_TAG=16.3&TC_TMPFS=/testtmpfs:rw"
   sql:
     init:
+      schema-locations: classpath:db/schema.sql
       data-locations: classpath:db/data.sql
       mode: always
