fix: Spring Modulith を導入だけして構成変更はしない

--- a/petclinic-fullstack/app/src/main/resources/application.yml
+++ b/petclinic-fullstack/app/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     basename: messages/messages
   reactor:
     context-propagation: auto
+  modulith:
+    detection-strategy: explicitly-annotated
 management:
   observations:
     annotations:
